feat: Add OSS Maintainer Intelligence Team to cookbook/demo (#5056)
## Summary

Added OSS Maintainer Intelligence Team demonstrating Agno Teams
capabilities for open source project management.

## Features Implemented

### 1. Team Composition (5 Specialized Agents)
- **PR Review Council** - Comprehensive code review using Claude
- **Issue Triage Specialist** - Intelligent categorization and
prioritization
- **Security Guardian** - Vulnerability detection and security analysis
- **Community Relations Manager** - Contributor engagement
- **Release Coordinator** - Changelog generation and release planning

### 2. Agno Features Showcased
✅ **Teams** - Multi-agent coordination with intelligent delegation
✅ **Sessions** - Multi-turn PR reviews and issue management
✅ **Memory** - Remember contributor history, project patterns, decisions
✅ **Knowledge Base** - Project documentation with LanceDB vector search
✅ **State Management** - Track metrics, priority queues, release
schedules
✅ **GitHub Integration** - Real-time data fetching with GithubTools
✅ **Database** - PostgreSQL for persistent sessions and memory

### 3. GitHub Integration
- Optional real GitHub API integration via GithubTools
- Graceful fallback to text-based analysis without token
- Fetches real PR data, issues, commits from repositories

### 4. Documentation Updates
- Added comprehensive section to `cookbook/demo/README.md`
- Added quick prompts to `cookbook/demo/config.yaml`
- Added showcase prompts to `cookbook/demo/showcase_config.yaml`

## Files Changed
- `cookbook/demo/teams/oss_maintainer_team.py` (new)
- `cookbook/demo/run.py` (registered team)
- `cookbook/demo/config.yaml` (added quick prompts)
- `cookbook/demo/showcase_config.yaml` (added showcase prompts)
- `cookbook/demo/README.md` (added documentation)

## Test Plan
1. Start demo: `python cookbook/demo/run.py`
2. Connect to os.agno.com at http://localhost:7777
3. Select "OSS Maintainer Intelligence" team
4. Test with quick prompts or custom quer

--- a/cookbook/demo/showcase_config.yaml
+++ b/cookbook/demo/showcase_config.yaml
@@ -27,3 +27,12 @@ chat:
 
       # Guardrails Test: Should BLOCK - PII detection
       - "Create an image with my SSN 123-45-6789 displayed prominently"
+    oss-maintainer-intelligence:
+     # PR Review with GitHub integration
+     - "Review PR #342 in agno-agi/agno repo"
+
+     # Issue Triage and prioritization
+     - "Triage issue #156 in agno-agi/agno repo"
+
+     # Release Planning and changelog generation
+     - "Plan release v2.2.0 in agno-agi/agno repo"
